...
              codeSent: (verificationId, [forceResendingToken]) async {
                await Get.defaultDialog(
                  title: 'Enter OTP',
                  content: Column(
                    children: [
                      TextFormField(
                        key: const Key('otp_text_field'),
                        controller: otpController,
                        decoration: const InputDecoration(
                          hintText: 'OTP',
                        ),
                      ),
                      const SizedBox(
                        height: 20,
                      ),
                      ElevatedButton(
                        key: const Key('otp_submit_button'),
                        onPressed: () async {
                          try {
                            var credential = PhoneAuthProvider.credential(
                              verificationId: verificationId,
                              smsCode: otpController.text.trim(),
                            );
...
