...
                    ),
                  ),
                  SizedBox(height: 5.dp),
                  Padding(
                    padding: const EdgeInsets.fromLTRB(0, 16, 0, 0),
                    child: TextFormField(
                      key: const Key('sign_in_phone_text_field'),
                      controller: getController.phoneController,
                      keyboardType: TextInputType.phone,
                      obscureText: false,
                      textAlign: TextAlign.start,
                      maxLines: 1,
                      style: const TextStyle(
...
                    children: [
                      Expanded(
                        flex: 1,
                        child: Obx(() {
                          return !getController.showLoader.value
                              ? MaterialButton(
                                  key: const Key('sign_in_button'),
                                  onPressed: () {
                                    getController
                                        .initiateLogin()
                                        .catchError((error) => Get.snackbar(
                                              'Error',
                                              error.toString(),
...
